--- a/index.html
+++ b/index.html
@@ -2,131 +2,133 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FacePrep Skleton By Ankita</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
     <nav>
         <ul>
-            <li>ProGrad</li>
+            <li class="logo-text">ProGrad001</li>
             <li>
                 <ul>
-                    <li>HOME</li>
-                    <li>BIO</li>
-                    <li>PORTFOLIO</li>
-                    <li>SKILLS</li>
-                    <li>CONTACT</li>
+                    <li><a href="#home" class="nav-link">HOME</a></li>
+                    <li><a href="#bio" class="nav-link">BIO</a></li>
+                    <li><a href="#portfolio" class="nav-link">PORTFOLIO</a></li>
+                    <li><a href="#skills" class="nav-link">SKILLS</a></li>
+                    <li><a href="#contact" class="nav-link link-button">CONTACT</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
-    <header>
+    <header id="home">
         <div>
             <p>I BELIEVE IN</p>
             <h1>EAT (); SLEEP (); CODE (); REPEAT ();</h1>
         </div>
     </header>
-    <section>
-        <img src="./assets/Ankita.jpg" alt="Ankita Photo" width="350px" height="400px">
+    <section id="bio">
+        <img src="./assets/Ankita.jpg" alt="Ankita Photo" width="350px" height="400px" />
         <article>
             <h2>Ankita Panjwani</h2>
-            <p>I am a Passionate Front End Developer! I have completed my
-                B.E. in Computer Science in 2020. I am currently exploring
-                all the front end technologies like HTML , CSS, Bootstrap4,
-                Materilize CSS etc. I have recently joined the ProGrad frontend
-                Bootcamp which is of 5 days. I am learing the frontend essentials
-                from this Bootcamp. And I am happy that I joined it!
-
+            <p>
+                I am a Passionate Front End Developer! I have completed my B.E. in
+                Computer Science in 2020. I am currently exploring all the front end
+                technologies like HTML , CSS, Bootstrap4, Materilize CSS etc. I have
+                recently joined the ProGrad frontend Bootcamp which is of 5 days. I am
+                learing the frontend essentials from this Bootcamp. And I am happy
+                that I joined it!
             </p>
-            <a href="#">Download My Resume</a>
+            <a href="#" class="link-button">Download My Resume</a>
         </article>
     </section>
-    <section>
+    <section id="portfolio">
         <h3>PORTFOLIO</h3>
         <p>Some of my best Projects so far!</p>
-        <hr>
+        <hr />
         <div>
-            <div>
-                <img src="" alt="">
+            <div class="text">
+                <img src="./assets/code-icon.png" alt="code-icon" width="60px" height="60px" />
                 <h4>PERSONAL BLOG</h4>
                 <p>It will be like a CV.</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="text">
+                <img src="./assets/code-icon.png" alt="code-icon" width="60px" height="60px" />
                 <h4>WATCHLAND</h4>
-                <p>It is a dynamic Website which is an E-commerce site
-                    of Worldclass Watches!
+                <p>
+                    It is a dynamic Website which is an E-commerce site of Worldclass
+                    Watches!
                 </p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="text">
+                <img src="./assets/code-icon.png" alt="code-icon" width="60px" height="60px" />
                 <h4>Time Table Generator</h4>
                 <p>It is a time table generator made using FrontEnd Stack!</p>
             </div>
         </div>
     </section>
-    <section>
+    <section id="skills">
         <h3>SKILLS</h3>
-        <div>
-            <h4>TECHNICAL SKILLS</h4>
+        <div id="skills-container">
             <div>
-                <ul>
-                    <li>HTML</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                    <li>CSS</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                    <li>JAVASCRIPT</li>
-                    <li>
-                        <progress id="file" value="100" max="100">
-                        </progress>
-                    </li>
-                    <li>Materilize CSS</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                    <li>GIT</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                </ul>
+                <h4>TECHNICAL SKILLS</h4>
+                <div>
+                    <ul>
+                        <li>HTML</li>
+                        <li>
+                            <progress id="file" value="90" max="100"></progress>
+                        </li>
+                        <li>CSS</li>
+                        <li>
+                            <progress id="file" value="60" max="100"></progress>
+                        </li>
+                        <li>JAVASCRIPT</li>
+                        <li>
+                            <progress id="file" value="50" max="100"></progress>
+                        </li>
+                        <li>Materilize CSS</li>
+                        <li>
+                            <progress id="file" value="80" max="100"></progress>
+                        </li>
+                        <li>GIT</li>
+                        <li>
+                            <progress id="file" value="40" max="100"></progress>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div>
-            <h4>LANGUAGES</h4>
             <div>
-                <ul>
-                    <li>ENGLISH</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                    <li>HINDI</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                    <li>GUJARATI</li>
-                    <li>
-                        <progress id="file" value="100" max="100"></progress>
-                    </li>
-                </ul>
+                <h4>LANGUAGES</h4>
+                <div>
+                    <ul>
+                        <li>ENGLISH</li>
+                        <li>
+                            <progress id="file" value="95" max="100"></progress>
+                        </li>
+                        <li>HINDI</li>
+                        <li>
+                            <progress id="file" value="98" max="100"></progress>
+                        </li>
+                        <li>GUJARATI</li>
+                        <li>
+                            <progress id="file" value="70" max="100"></progress>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="contact">
         <h3>CONTACT</h3>
         <form action="#">
-            <input type="text" name="" placeholder="ENTER YOUR NAME" id="name"><br><br>
-            <input type="text" name="" placeholder="ENTER YOUR EMAIL" id="email"><br><br>
-            <input type="text" name="" placeholder="ENTER YOUR PASSWORD" id="password"><br><br>
-            <input type="submit" value="Send Message">
+            <input type="text" name="name" class="input" placeholder="ENTER YOUR NAME" id="name" />
+            <input type="text" name="email" class="input" placeholder="ENTER YOUR EMAIL" id="email" />
+            <input type="text" name="password" class="input" placeholder="ENTER YOUR PASSWORD" id="password" />
+            <input type="submit" value="Send Message" class="link-button" />
         </form>
     </footer>
-
 </body>
 
 </html>
